--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,32 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <!--login_account-->
+    <!--login_password-->
+    <!--login_login-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Common.View.LoginActivity">
 
 
-   <EditText
-       android:id="@+id/login_account"
-       android:hint="GitHub—Name"
-       android:layout_width="match_parent"
-       android:layout_height="60dp" />
 
-    <EditText
-        android:id="@+id/login_password"
-        android:inputType="textPassword"
-        android:hint="GitHub-PassWord"
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/logo"
+        android:src="@mipmap/github4"
+        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_login_account"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="60dp" />
-
-
-    <Button
-        android:text="Login"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/login_account"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_login_password"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/layout_login_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/login_password"
+            android:maxLines="1"
+            android:inputType="textPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+    <TextView
         android:id="@+id/login_login"
+        android:layout_below="@+id/layout_login_password"
+        android:layout_marginTop="20dp"
+        android:text="@string/login"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:textSize="20dp"
+        android:background="@drawable/shape_login_btn"
+        android:layout_marginRight="45dp"
+        android:layout_marginLeft="45dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="45dp" />
+
+    <LinearLayout
+        android:id="@+id/lodding"
+        android:visibility="gone"
+        android:gravity="center"
+        android:background="#41000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:background="@drawable/white_raduis_bg"
+            android:gravity="center"
+            android:layout_width="110dp"
+            android:layout_height="110dp">
+            <com.airbnb.lottie.LottieAnimationView
+                app:lottie_fileName="material_loading_animation.json"
+                app:lottie_imageAssetsFolder="/"
+                app:lottie_autoPlay="true"
+                android:layout_gravity="center"
+                app:lottie_loop="true"
+                android:layout_width="100dp"
+                android:layout_height="100dp" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
