--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,52 +8,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Common.View.LoginActivity">
 
 
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/logo"
-        android:src="@mipmap/github4"
+        android:src="@mipmap/login_logo"
         android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
+        android:layout_width="180dp"
+        android:layout_height="180dp" />
     <android.support.design.widget.TextInputLayout
+        android:paddingTop="6dp"
+        android:gravity="bottom"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/edit_background"
         android:id="@+id/layout_login_account"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
+        android:layout_height="60dp">
+        <EditText
+            android:drawableLeft="@mipmap/user"
             android:id="@+id/login_account"
             android:maxLines="1"
+            android:text="Nixo0427"
+            android:textColor="#fff"
+            android:outlineSpotShadowColor="#fff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
+        android:paddingTop="6dp"
+        android:gravity="bottom"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/edit_background"
         android:id="@+id/layout_login_password"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="16dp"
         android:layout_below="@+id/layout_login_account"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputEditText
+        android:layout_height="60dp"
+        >
+        <EditText
+            android:drawableLeft="@mipmap/password"
             android:id="@+id/login_password"
             android:maxLines="1"
+            android:text="js19981226"
+            android:textColor="#fff"
+            android:textCursorDrawable="@color/colorAccent"
             android:inputType="textPassword"
+            android:outlineSpotShadowColor="#fff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
     <TextView
+
         android:id="@+id/login_login"
         android:layout_below="@+id/layout_login_password"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="@string/login"
         android:gravity="center"
         android:textColor="#fff"
@@ -64,5 +86,14 @@
         android:layout_width="match_parent"
         android:layout_height="45dp" />
 
+    <TextView
+        android:id="@+id/login_register"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/login_login"
+        android:layout_alignRight="@+id/login_login"
+        android:text="@string/sign_out"
+        android:textColor="#fff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
