--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/navigation_header"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#000"
+    android:background="#24292f"
     android:layout_width="300dp"
     android:layout_height="200dp">
-    <de.hdodenhof.circleimageview.CircleImageView
+    <cn.carbs.android.avatarimageview.library.AppCompatAvatarImageView
         android:id="@+id/nav_img"
         android:layout_marginTop="20dp"
         android:src="@mipmap/default_header"
