--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_height="match_parent"
         android:id="@+id/navigation_view"
         app:headerLayout="@layout/header_layout"
+        app:menu="@menu/menu_scrolling"
         android:layout_gravity="left|start"
     >
 
