--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="github.nixo.com.github.ScrollingActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/nav_menu_logout"
         android:orderInCategory="100"
-        android:title="settings"
-        app:showAsAction="never" />
+        android:icon="@mipmap/power_off"
+        android:title="Logout"
+        app:showAsAction="always" />
 </menu>
