--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -8,7 +8,7 @@
 <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar_serch_layout"
     android:layout_width="match_parent"
-    android:background="#24292f"
+    android:background="@color/main_color"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
   >
