--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/user_bg"
+            android:src="#555555"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -91,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"/>
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_baseRecylerView"
             android:gravity="center_horizontal"
             android:layout_below="@+id/user_card"
             android:layout_width="match_parent"
@@ -101,8 +103,8 @@
             android:id="@+id/user_card"
             android:layout_below="@+id/user_bar"
             android:background="@drawable/user_card_background_white"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_width="match_parent"
