--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/user_bg"
-            android:src="#555555"
+            android:src="@color/colorAccent"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -42,7 +42,7 @@
                     android:text="Overview"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
                 <RadioButton
                     android:id="@+id/rb_repositories"
                     android:gravity="center"
@@ -53,7 +53,7 @@
                     android:text="Repositories"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
                 <RadioButton
                     android:gravity="center"
                     android:textColor="@drawable/radio_bg"
@@ -63,7 +63,7 @@
                     android:text="Star"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
                 <RadioButton
                     android:gravity="center"
                     android:textColor="@drawable/radio_bg"
@@ -73,7 +73,7 @@
                     android:text="Followers"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
                 <RadioButton
                     android:id="@+id/rb_followering"
                     android:gravity="center"
@@ -83,7 +83,7 @@
                     android:text="Followering"
                     android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
             </RadioGroup>
         </RelativeLayout>
         <View
