--- a/app/src/main/res/layout/item_repository.xml
+++ b/app/src/main/res/layout/item_repository.xml
@@ -1,41 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:paddingRight="5dp"
     android:paddingLeft="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
+    android:layout_height="120dp">
+
+    <RelativeLayout
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/repository_date"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+        <TextView
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/item_tv_repository_update"
+            android:textSize="14sp"
+            android:textColor="@color/colorAccent"
+            android:layout_marginLeft="20dp"
+            android:maxLines="1"
+            android:text="2017-12-22T12:45:50Z"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+<RelativeLayout
+
     android:background="@drawable/repository_bg"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="100dp">
 
 
     <cn.carbs.android.avatarimageview.library.AppCompatAvatarImageView
         android:id="@+id/item_iv_repository_img"
         android:layout_marginLeft="20dp"
         android:layout_centerVertical="true"
-        android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_width="85dp"
+        android:layout_height="85dp" />
+    <cn.carbs.android.avatarimageview.library.AppSquareAvatarImageView
+        android:id="@+id/item_iv_repository_user_img"
+        android:visibility="visible"
+        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true"
+        android:layout_width="80dp"
+        android:layout_height="80dp" />
     <TextView
-        android:layout_marginLeft="120dp"
+       android:layout_marginLeft="160dp"
+
+        android:maxLines="2"
+        android:gravity="left"
         android:id="@+id/item_tv_repository_titile"
         android:textColor="@color/colorAccent"
+        android:paddingRight="5dp"
         android:layout_marginTop="10dp"
-        android:text="Android-Kotlin-Ext"
         android:textSize="16sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_alignLeft="@+id/item_tv_repository_titile"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/item_tv_repository_titile"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:layout_marginRight="20dp"
             android:id="@+id/item_tv_repository_languge"
             android:textColor="@color/colorAccent"
             android:text="Kotlin"
@@ -43,7 +76,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <LinearLayout
-            android:layout_marginLeft="20dp"
             android:id="@+id/item_ll_repository_fork"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -61,16 +93,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-        <TextView
 
-            android:id="@+id/item_tv_repository_update"
-            android:textSize="14sp"
-            android:textColor="@color/colorAccent"
-            android:layout_marginLeft="20dp"
-            android:maxLines="1"
-            android:text="2017-12-22T12:45:50Z"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </LinearLayout>
+
+
+</RelativeLayout>
 
 </RelativeLayout>
