--- a/app/src/main/res/drawable/repository_date.xml
+++ b/app/src/main/res/drawable/repository_date.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <solid android:color="#292e36"/>
+    <solid android:color="#d2676e7b"/>
     <corners android:radius="10dp"/>
 
 
