--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -21,6 +21,7 @@
             android:layout_height="110dp" />
         <RelativeLayout
             android:id="@+id/user_bar"
+            android:background="@color/main_color"
             android:layout_width="match_parent"
             android:layout_height="70dp">
             <ImageView
@@ -86,33 +87,19 @@
                     android:layout_height="match_parent" />
             </RadioGroup>
         </RelativeLayout>
-        <View
+        <RelativeLayout
+            android:id="@+id/rv_user_fragmentContent"
+            android:layout_marginTop="70dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </RelativeLayout>
+        <View
+            android:background="@color/main_color"
             android:layout_below="@+id/user_bar"
             android:layout_width="match_parent"
             android:layout_height="40dp"/>
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/srl_user_repository"
-        android:layout_marginTop="130dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_baseRecylerView"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/user_card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <com.airbnb.lottie.LottieAnimationView
-            app:lottie_fileName="more.json"
-            app:lottie_imageAssetsFolder="/"
-            app:lottie_autoPlay="true"
-            android:layout_gravity="center"
-            app:lottie_loop="true"
-
-            android:layout_width="match_parent"
-            android:layout_height="60dp" />
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
         <RelativeLayout
             android:id="@+id/user_card"
             android:layout_below="@+id/user_bar"
