--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,15 @@
             android:id="@+id/srl_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <com.airbnb.lottie.LottieAnimationView
+                app:lottie_fileName="growing_circle.json"
+                app:lottie_imageAssetsFolder="/"
+                app:lottie_autoPlay="true"
+                android:layout_gravity="center"
+                app:lottie_loop="true"
+
+                android:layout_width="match_parent"
+                android:layout_height="60dp" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_all_reposition"
                 android:layout_width="match_parent"
@@ -39,12 +48,13 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="60dp" />
+
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
     </LinearLayout>
 
 
     <android.support.design.widget.NavigationView
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:id="@+id/navigation_view"
         app:headerLayout="@layout/header_layout"
