--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bbb">#bbb</color>
     <color name="xxx">#000000</color>
     <color name="userinfo_bg">#9c9a9a</color>
+    <color name="no_color">#00000000</color>
 </resources>
