--- a/app/src/main/res/anim/dialog_exit_anim.xml
+++ b/app/src/main/res/anim/dialog_exit_anim.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <alpha android:fromAlpha="1.0" android:toAlpha="0.1" android:duration="1200"/>
+
     <scale
         android:fromXScale="1.0"
         android:fromYScale="1.0"
@@ -8,7 +10,7 @@
         android:toYScale="0.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="5000"
+        android:duration="300"
         />
 
 </set>
