--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -7,7 +7,7 @@
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:layout_marginTop="30dp"
-        android:id="@+id/srl_user_repository"
+        android:id="@+id/srl_user_following"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,27 +20,18 @@
             android:layout_width="match_parent"
             android:layout_height="60dp" />
         <LinearLayout
-            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <android.support.v7.widget.RecyclerView
-            android:gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:id="@+id/rv_user_following"
             android:layout_below="@+id/user_card"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         </LinearLayout>
-        <com.airbnb.lottie.LottieAnimationView
-            app:lottie_fileName="more.json"
-            app:lottie_imageAssetsFolder="/"
-            app:lottie_autoPlay="true"
-            android:layout_gravity="center"
-            app:lottie_loop="true"
-            android:layout_width="match_parent"
-            android:layout_height="60dp" />
+
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-
+    <include layout="@layout/public_no_data"/>
 </RelativeLayout>
