--- a/app/src/main/res/layout/item_following.xml
+++ b/app/src/main/res/layout/item_following.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="20dp"
-    android:layout_height="130dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <cn.carbs.android.avatarimageview.library.AppSquareAvatarImageView
@@ -17,8 +17,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
 
     <TextView
